--- a/css/style.css
+++ b/css/style.css
@@ -14516,12 +14516,12 @@ ul.brand-style-2 img:hover {
 /*--------------------------
 Call To Action Wrapper 
 -----------------------------*/
-.call-to-action {
+.contact-client-section {
   background: linear-gradient(145deg, #f81f01 0%, #ee076e 100%);
   position: relative;
   z-index: 2;
 }
-.call-to-action::before {
+.contact-client-section::before {
   position: absolute;
   width: 100%;
   height: 100%;
