--- a/css/style.css
+++ b/css/style.css
@@ -17948,7 +17948,7 @@ fieldset {
 
 
 .client-card {
-  /* min-width: 253px;
+  min-width: 253px;
   min-height: 402px;
   background: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
@@ -17957,22 +17957,10 @@ fieldset {
   text-align: center;
   color: black;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-  flex-shrink: 0; */
+  flex-shrink: 0;
 
   
-    min-width: clamp(220px, 30vw, 253px);
-    height: auto;
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    border-radius: 20px;
-    padding: 20px;
-    text-align: center;
-    color: black;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+ 
   
   
 }
